syntax = "proto3";

package api.test.service.v1;

option go_package = "framework-kratos/api/test/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.test.service.v1";

import "google/api/annotations.proto";

service Test {
	rpc CreateTest (CreateTestRequest) returns (CreateTestReply){
		option (google.api.http) = {
			post: "/api/test/service/v1/test"
			body: "*"
		};
	}
	rpc UpdateTest (UpdateTestRequest) returns (UpdateTestReply);
	rpc DeleteTest (DeleteTestRequest) returns (DeleteTestReply);
	rpc GetTest (GetTestRequest) returns (GetTestReply);
	rpc ListTest (ListTestRequest) returns (ListTestReply);
}

message CreateTestRequest {}
message CreateTestReply {}

message UpdateTestRequest {}
message UpdateTestReply {}

message DeleteTestRequest {}
message DeleteTestReply {}

message GetTestRequest {}
message GetTestReply {}

message ListTestRequest {}
message ListTestReply {}